add；添加表达方式检查脚本

--- a/template/model_config_template.toml
+++ b/template/model_config_template.toml
@@ -141,13 +141,13 @@ temperature = 0.2                        # 模型温度，新V3建议0.1-0.3
 max_tokens = 4096                         # 最大输出token数
 slow_threshold = 15.0                     # 慢请求阈值（秒），模型等待回复时间超过此值会输出警告日志
 
-[model_task_config.tool_use] #工具调用模型，需要使用支持工具调用的模型
+[model_task_config.tool_use] #功能模型，需要使用支持工具调用的模型，请使用较快的小模型（调用量较大）
 model_list = ["qwen3-30b","qwen3-next-80b"]
 temperature = 0.7
-max_tokens = 800
+max_tokens = 1024
 slow_threshold = 10.0
 
-[model_task_config.replyer] # 首要回复模型，还用于表达器和表达方式学习
+[model_task_config.replyer] # 首要回复模型，还用于表达方式学习
 model_list = ["siliconflow-deepseek-v3.2","siliconflow-deepseek-v3.2-think","siliconflow-glm-4.6","siliconflow-glm-4.6-think"]
 temperature = 0.3                        # 模型温度，新V3建议0.1-0.3
 max_tokens = 2048
