--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -1,5 +1,5 @@
 [inner]
-version = "7.2.8"
+version = "7.3.0"
 
 #----以下是给开发人员阅读的，如果你只是部署了麦麦，不需要阅读----
 # 如果你想要修改配置文件，请递增version的值
@@ -91,13 +91,21 @@ expression_groups = [
     # 注意：如果为群聊，则需要设置为group，如果设置为私聊，则需要设置为private
 ]
 
-reflect = false # 是否启用表达反思（Bot主动向管理员询问表达方式是否合适）
-reflect_operator_id = "" # 表达反思操作员ID，格式：platform:id:type (例如 "qq:123456:private" 或 "qq:654321:group")
+expression_checked_only = true # 是否仅选择已检查且未拒绝的表达方式。当设置为 true 时，只有 checked=True 且 rejected=False 的表达方式才会被选择；当设置为 false 时，保留旧的筛选原则（仅排除 rejected=True 的表达方式）
+
+expression_self_reflect = true # 是否启用自动表达优化（Bot主动向管理员询问表达方式是否合适）
+expression_auto_check_interval = 600 # 表达方式自动检查的间隔时间（单位：秒），默认值：3600秒（1小时）
+expression_auto_check_count = 20 # 每次自动检查时随机选取的表达方式数量，默认值：10条
+
+expression_manual_reflect = false # 是否启用手动表达优化（Bot主动向管理员询问表达方式是否合适）
+manual_reflect_operator_id = "" # 手动表达优化操作员ID，格式：platform:id:type (例如 "qq:123456:private" 或 "qq:654321:group")
 allow_reflect = [] # 允许进行表达反思的聊天流ID列表，格式：["qq:123456:private", "qq:654321:group", ...]，只有在此列表中的聊天流才会提出问题并跟踪。如果列表为空，则所有聊天流都可以进行表达反思（前提是 reflect = true）
+
 
 all_global_jargon = true # 是否开启全局黑话模式，注意，此功能关闭后，已经记录的全局黑话不会改变，需要手动删除
 enable_jargon_explanation = true # 是否在回复前尝试对上下文中的黑话进行解释（关闭可减少一次LLM调用，仅影响回复前的黑话匹配与解释，不影响黑话学习）
 jargon_mode = "planner" # 黑话解释来源模式，可选： "context"（使用上下文自动匹配黑话） 或 "planner"（仅使用Planner在reply动作中给出的unknown_words列表）
+
 
 
 [chat] # 麦麦的聊天设置
