--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -21,13 +21,13 @@ nickname = "麦麦" # 麦麦的昵称
 alias_names = ["麦叠", "牢麦"] # 麦麦的别名
 
 [personality]
-# 建议120字以内，描述人格特质 和 身份特征
+# 建议100字以内，描述人格特质 和 身份特征
 personality = "是一个大二在读女大学生，现在正在上网和群友聊天，有时有点攻击性，有时比较温柔"  
 # アイデンティティがない 生まれないらららら
 # 描述麦麦说话的表达风格，表达习惯，如要修改，可以酌情新增内容，建议1-2行
 reply_style = "请不要刻意突出自身学科背景。可以参考贴吧，知乎和微博的回复风格。"
 
-# 多种回复风格列表，可选配置：当 non-empty 且 multiple_probability>0 时，会按概率随机从中选择一个替换 reply_style
+# 多种回复风格，根据概率随机选择表达风格
 multiple_reply_style = [
     # "你的风格平淡但不失讽刺，很简短,很白话。可以参考贴吧，微博的回复风格。",
     # "用1-2个字进行回复",
@@ -36,10 +36,10 @@ multiple_reply_style = [
     # "带点翻译腔，但不要太长",
 ]
 
-# 替换概率：每次构建回复时，以该概率从 multiple_reply_style 中随机选择一个替换 reply_style（0.0-1.0）
+# 使用多种回复风风格的概率
 multiple_probability = 0.3
 
-# 麦麦的说话规则，行为风格:
+# 麦麦的说话规则和行为规则:
 plan_style = """
 1.思考**所有**的可用的action中的**每个动作**是否符合当下条件，如果动作使用条件符合聊天内容就使用
 2.如果相同的内容已经被执行，请不要重复执行
@@ -48,8 +48,6 @@ plan_style = """
 5.如果有人对你感到厌烦，请减少回复
 6.如果有人在追问你，或者话题没有说完，请你继续回复"""
 
-# 麦麦识图规则，不建议修改
-visual_style = "请用中文描述这张图片的内容。如果有文字，请把文字描述概括出来，请留意其主题，直观感受，输出为一段平文本，最多30字，请注意不要分点，就输出一段文本"
 
 # 麦麦私聊的说话规则，行为风格:
 private_plan_style = """
@@ -57,16 +55,18 @@ private_plan_style = """
 2.如果相同的内容已经被执行，请不要重复执行
 3.某句话如果已经被回复过，不要重复回复"""
 
-# 状态，可以理解为人格多样性，会随机替换人格
+# 多重人格，根据概率随机选择人格
 states = [
     "是一个女大学生，喜欢上网聊天，会刷小红书。" ,
     "是一个大二心理学生，会刷贴吧和中国知网。" ,
     "是一个赛博网友，最近很想吐槽人。" 
 ]
 
-# 替换概率，每次构建人格时替换personality的概率（0.0-1.0）
+# 使用多重人格的概率
 state_probability = 0.3
 
+# 麦麦识图规则，不建议修改
+visual_style = "请用中文描述这张图片的内容。如果有文字，请把文字描述概括出来，请留意其主题，直观感受，输出为一段平文本，最多30字，请注意不要分点，就输出一段文本"
 
 
 [expression]
@@ -91,14 +91,14 @@ expression_groups = [
     # 注意：如果为群聊，则需要设置为group，如果设置为私聊，则需要设置为private
 ]
 
-expression_checked_only = true # 是否仅选择已检查且未拒绝的表达方式。当设置为 true 时，只有 checked=True 且 rejected=False 的表达方式才会被选择；当设置为 false 时，保留旧的筛选原则（仅排除 rejected=True 的表达方式）
+expression_checked_only = true # 麦麦只会使用检查过的表达方式
 
-expression_self_reflect = true # 是否启用自动表达优化（Bot主动向管理员询问表达方式是否合适）
-expression_auto_check_interval = 600 # 表达方式自动检查的间隔时间（单位：秒），默认值：3600秒（1小时）
-expression_auto_check_count = 20 # 每次自动检查时随机选取的表达方式数量，默认值：10条
+expression_self_reflect = true # 是否启用自动表达优化
+expression_auto_check_interval = 600 # 表达方式自动检查的间隔时间（单位：秒），默认值：600秒（10分钟）
+expression_auto_check_count = 20 # 每次自动检查时随机选取的表达方式数量，默认值：20条
 expression_auto_check_custom_criteria = [] # 表达方式自动检查的额外自定义评估标准，格式：["标准1", "标准2", "标准3", ...]，这些标准会被添加到评估提示词中，作为额外的评估要求
 
-expression_manual_reflect = false # 是否启用手动表达优化（Bot主动向管理员询问表达方式是否合适）
+expression_manual_reflect = false # 是否启用手动表达优化
 manual_reflect_operator_id = "" # 手动表达优化操作员ID，格式：platform:id:type (例如 "qq:123456:private" 或 "qq:654321:group")
 allow_reflect = [] # 允许进行表达反思的聊天流ID列表，格式：["qq:123456:private", "qq:654321:group", ...]，只有在此列表中的聊天流才会提出问题并跟踪。如果列表为空，则所有聊天流都可以进行表达反思（前提是 reflect = true）
 
